# Enigma-Machine-Emulator

./: .gitignore  Cargo.toml  README.md  index.html  style.css
src/: charindex.rs  enigma.rs  main.rs  plugboard.rs  reflector.rs  rotor.rs
