[package]
name = "enigma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
web-sys = { version = "0.3.61", features = ["HtmlSelectElement"] }
yew = { version = "0.20", features = ["csr"] }
gloo = "0.8"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
